[metadata]
name = ansible-deployer
version = 0.0.18
description = Wrapper around ansible-playbook allowing configurable tasks and permissions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cinek810/ansible-deployer
author = M. Stolarek
author_email = 
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: System :: Distributed Computing
    Topic :: System :: Clustering
project_urls = 
    Documentation = 
    Source = https://github.com/cinek810/ansible-deployer
    Tracker = 

[options]
zip_safe = False
packages = ansible_deployer
platforms = any
include_package_data = True
install_requires =
    pyyaml>=5.3.1
    cerberus>=1.3.1
python_requires = >=3.6
setup_requires =
    setuptools
    wheel

[options.entry_points]
console_scripts =
    ansible-deployer = ansible_deployer.command_line:main

