[metadata]
name = ansible-deployer
version = 0.0.42
description = Wrapper around ansible-playbook allowing configurable tasks and permissions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cinek810/ansible-deployer
author = J. Wierzbowski, M. Stolarek
author_email =
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: System :: Systems Administration
    Topic :: System :: Distributed Computing
    Topic :: System :: Clustering
project_urls =
    Documentation =
    Source = https://github.com/cinek810/ansible-deployer
    Tracker =

[options]
package_dir =
    ansible_deployer=source
packages =
    ansible_deployer
    ansible_deployer.modules
    ansible_deployer.modules.configs
    ansible_deployer.modules.outputs
    ansible_deployer.modules.locking
    ansible_deployer.modules.runners
    ansible_deployer.modules.validators
    ansible_deployer.modules.database
install_requires =
    pyyaml>=5.3.1
    cerberus>=1.3.1
    pytest-testinfra>=6.6.0
python_requires = >=3.6
zip_safe = False
setup_requires =
    setuptools
include_package_data = True

[options.entry_points]
console_scripts =
    ansible-deployer = ansible_deployer.main:main

